--- a/client/todos-list/todos-list.vul.html
+++ b/client/todos-list/todos-list.vul.html
@@ -4,6 +4,9 @@
 
 <link rel="import" href="../bower_components/polyteor-element/polyteor-collection.html">
 
+<link rel="import" href="../todo-item/todo-item.pt.html">
+
+
 
 
 
@@ -127,17 +130,19 @@
             </header>
 
             <form is="iron-form" id="form" class="new-task" novalidate>
-                <paper-input required   error-message="Invalid task name!" pattern="[a-zA-Z][a-zA-Z0-9]{0,19}" type="text" name="text" placeholder="Type to add new tasks">
+                <paper-input required error-message="Invalid task name!" pattern="[a-zA-Z][a-zA-Z0-9]{0,19}" type="text" name="text" placeholder="Type to add new tasks">
                 </paper-input>
 
             </form>
 
             <ul>
-                <template is="dom-repeat" items="[[todos]]" as="todo">
-                    <li>
-                        {{todo.text}}
-                    </li>
-                </template>
+                <ul>
+                    <template is="dom-repeat" items="[[todos]]" as="todo">
+                        <li>
+                            <todo-item todo="[[todo]]" on-check-todo="setChecked" on-delete-todo="deleteTodo"></todo-item>
+                        </li>
+                    </template>
+                </ul>
             </ul>
         </div>
     </template>
@@ -161,8 +166,8 @@
                 ready() {
                     this.$.form.addEventListener('iron-form-presubmit', (event) => {
                         event.preventDefault(); // To prevent default form submission
-                        if(!this.$.form.validate()){
-                          return;  // We abort because the form is invalid
+                        if (!this.$.form.validate()) {
+                            return; // We abort because the form is invalid
                         }
 
                         let val = this.$.form.serialize(); // keys are name attributes of form elements.
@@ -173,6 +178,17 @@
                         this.$.form.reset();
 
                     });
+                },
+                deleteTodo(e) {
+                    Tasks.remove(e.detail.todo._id);
+                },
+                setChecked(e) {
+                    let todo = e.detail.todo;
+                    Tasks.update(todo._id, {
+                        $set: {
+                            checked: !todo.checked
+                        }
+                    })
                 }
 
             });
