--- a/client/todo-item/todo-item.pt.html
+++ b/client/todo-item/todo-item.pt.html
@@ -47,8 +47,8 @@
             <paper-checkbox checked="[[todo.checked]]" on-tap="_setChecked" class="toggle-checked"></paper-checkbox>
 
             <span class="text">
-            {{todo.text}}
-        </span>
+              <strong>{{todo.username}}</strong> - {{todo.text}}
+            </span>
         </div>
     </template>
 
